--- a/ckanext/deadoralive/templates/package/snippets/resource_item.html
+++ b/ckanext/deadoralive/templates/package/snippets/resource_item.html
@@ -4,6 +4,6 @@
   {{ super() }}
   {% set link_checker_result = h.ckanext_deadoralive_get(res.id) %}
   {% if link_checker_result.broken %}
-    <span class="text-error"><i class="icon-warning-sign"></i> {{ _("Broken") }}</span>
+    <span class="text-error"><i class="icon-warning-sign"></i> {{ _("Resurss nav pieejams") }}</span>
   {% endif %}
 {% endblock %}
