--- a/ckanext/deadoralive/templates/broken_links_by_email.html
+++ b/ckanext/deadoralive/templates/broken_links_by_email.html
@@ -5,7 +5,7 @@
   {% resource "deadoralive/styles/master.css" %}
 {% endblock %}
 
-{% block subtitle %}{{ _("Broken Links") }}{% endblock %}
+{% block subtitle %}{{ _("Nedarbīgās saites") }}{% endblock %}
 
 {% block primary_content_inner %}
   {% if report %}
@@ -14,31 +14,31 @@
         {% if item.email %}
           <li class="item">
             <h3>{{ item.email }}</h3>
-            <p>{{ _("{0} broken links").format(item.num_broken_links) }}</p>
+            <p>{{ _("{0} nedarbīgas saites").format(item.num_broken_links) }}</p>
             <ul>
               {% for dataset in item.datasets_with_broken_links %}
                 <li>
                   <a href="{{ h.url_for(controller="package", action="read", id=dataset.name) }}">{{ dataset.title }}</a>:
-                  {{ _("{0} broken links").format(dataset.num_broken_links) }}
+                  {{ _("{0} nedarbīgas saites").format(dataset.num_broken_links) }}
                 </li>
               {% endfor %}
             </ul>
             <p>
               <a href="{{ item.mailto }}" class="btn">
                 <i class="icon-envelope"></i>
-                {{ _("Email maintainer") }}
+                {{ _("Nosūtīt e-pastu datu kopas uzturētājam") }}
               </a>
             </p>
           </li>
         {% else %}
           <li class="item">
-            <h3>{{ _("No author or maintainer email") }}</h3>
-            <p>{{ _("{0} broken links").format(item.num_broken_links) }}</p>
+            <h3>{{ _("Nav autora vai uzturētāja e-pasta") }}</h3>
+            <p>{{ _("{0} nedarbīga(s) saite(s)").format(item.num_broken_links) }}</p>
             <ul>
               {% for dataset in item.datasets_with_broken_links %}
                 <li>
                   <a href="{{ h.url_for(controller="package", action="read", id=dataset.name) }}">{{ dataset.title }}</a>:
-                  {{ _("{0} broken links").format(dataset.num_broken_links) }}
+                  {{ _("{0} nedarbīgas saites").format(dataset.num_broken_links) }}
                 </li>
               {% endfor %}
             </ul>
@@ -47,7 +47,7 @@
       {% endfor %}
     </ul>
   {% else %}
-    <p>{{ _("This site has no broken links") }}</p>
+    <p>{{ _("Nav nevienas nedarbīgas saites") }}</p>
   {% endif %}
 {% endblock %}
 
@@ -55,11 +55,11 @@
   <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
       <i class="icon-info-sign"></i>
-      {{ _('Broken links') }}
+      {{ _('Nedarbīgās saites') }}
     </h2>
     <div class="module-content">
       {% trans %}
-        <p>These are the maintainers of datasets that have resources which have broken links within them.</p>
+        <p>Te ir apkopota informācija par datu kopu uzturētājiem, kuriem ir resursi ar nedarbīgā saitēm.</p>
       {% endtrans %}
     </div>
   </div>
